# Online-text-chat

./: CMakeLists.txt  active_user.h  application.cpp  application.h  authorization_request_handler.cpp  authorization_request_handler.h  build-environment-setup.md  chat_controller.cpp  chat_controller.h  chat_server.cpp  chat_server.h  chat_window.cpp  chat_window.h  chat_window.ui  client.vpd  codestyle.md  connection_controller.cpp  connection_controller.h  connection_dialog.cpp  connection_dialog.h  connection_dialog.ui  database.cpp  database.h  database.sql  database_manager.cpp  database_manager.h  database_queries.h  login_info.h  main.cpp  network protocol.vpd  protobuf.md  registration_dialog.cpp  registration_dialog.h  registration_dialog.ui  registration_info.h  registration_request_handler.cpp  registration_request_handler.h  server.cpp  server.h  server.vpd  (+2 more)
